--- a/style.css
+++ b/style.css
@@ -1,169 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   font-family: Arial, Helvetica, sans-serif
+.done {
+  text-decoration: line-through;
 }
- 
-/* PARTE SUPERIORE */
-header{
-    background-color: rgb(255, 255, 255);
-    
-}
-
-.container{
-    width: 70%;
-    margin: 0 auto;
-}
-
-.logotext {
-    font-size: 40px;
-    vertical-align: middle;
-}
-
-.logo{
-    vertical-align: middle;
-}
-.vertical{
-    padding: 10px;
-}
-
-/* PARTE CENTRALE E LISTA */
-body{
-    background-color: rgb(232, 247, 248);
-}
-
-.content{
-    background-color: white;
-    margin-top: 50px;
-    padding: 10px;
-    border-radius: 5px;
-    
-}
-
-.task{
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    border: solid;
-   border-radius: 5px;
-   color: white;
-   background-color: rgb(100, 167, 229);
-   font-size: x-small;
-    }
-
-
-.section{
-    padding-left: 10px;
-    padding-right: 10px;
-    border: solid;
-    border-radius: 5px;
-    border-color: gray;
-    color: gray;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    font-size: x-small;
-}
-
-.content2{
-    background-color: white;
-    margin-top: 2px;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-ul{
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; 
-}
-
-li{
-    padding: 5px;
-
-
-
-}
-
-.check{
-    color: green;
-}
-
-.cross{
-    color: red;
-}
-h3{
-    margin-top: 20px;
-    margin-bottom: 5px;
-}
-
-.button1{
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    border: solid;
-   border-radius: 10px;
-   color: white;
-   background-color: rgb(100, 167, 229);
-   font-size: x-small;
-    }
-
-    .button2{
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 4px;
-        padding-bottom: 4px;
-        border: solid;
-       border-radius: 10px;
-       color: white;
-       background-color: rgb(149, 16, 147);
-       font-size: x-small;
-        }
-
-        .button3{
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-top: 4px;
-            padding-bottom: 4px;
-            border: solid;
-           border-radius: 10px;
-           color: white;
-           background-color: rgb(1, 131, 40);
-           font-size: x-small;
-            }
-
-            .button4{
-                padding-left: 10px;
-                padding-right: 10px;
-                padding-top: 4px;
-                padding-bottom: 4px;
-                border: solid;
-               border-radius: 10px;
-               color: white;
-               background-color: rgb(235, 104, 60);
-               font-size: x-small;
-                }
-                .button5{
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    padding-top: 4px;
-                    padding-bottom: 4px;
-                    border: solid;
-                   border-radius: 10px;
-                   color: white;
-                   background-color: rgb(250, 14, 215);
-                   font-size: x-small;
-                    }
-                    .button6{
-                        padding-left: 10px;
-                        padding-right: 10px;
-                        padding-top: 4px;
-                        padding-bottom: 4px;
-                        border: solid;
-                       border-radius: 10px;
-                       color: white;
-                       background-color: rgb(143, 198, 165);
-                       font-size: x-small;
-                        }
